# rds-metadata-exporter

./: .env-sample  Dockerfile  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-image.yaml
rds_metadata_exporter/: __main__.py
